terraform/sample_setup/ec2.tf
resource "aws_security_group" "sample_app" {
  name        = "sample-app-security-group"
  description = "Allow HTTP, HTTPS and SSH traffic"
  vpc_id      = module.vpc.vpc_id

  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["96.48.69.126/32"]
  }

  ingress {
    description = "HTTP"
    from_port   = 3000
    to_port     = 3000
    protocol    = "tcp"
    cidr_blocks = ["96.48.69.126/32"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name        = "sample-app-security-group"
    Owner       = "terraform"
    Environment = "dev"
  }
}

data "aws_ami" "sample_app" {
  most_recent = true

  filter {
    name   = "name"
    values = ["sample-app-image"]
  }

  owners = ["self"]
}

resource "aws_instance" "sample_app" {
  key_name                    = "sample-app-key"
  ami                         = data.aws_ami.sample_app.id
  instance_type               = "t2.micro"
  associate_public_ip_address = true
  subnet_id                   = module.vpc.public_subnets[0]
  vpc_security_group_ids      = [aws_security_group.sample_app.id]
  ebs_optimized               = false
  disable_api_termination     = false

  tags = {
    Name        = "sample-app"
    Owner       = "terraform"
    Environment = "dev"
  }
}
